[gd_scene load_steps=9 format=3 uid="uid://dmyla25h441el"]

[ext_resource type="Script" path="res://scripts/water.gd" id="1_cd1js"]
[ext_resource type="Texture2D" uid="uid://ddoytweu64pbj" path="res://textures/noise_texture.tres" id="1_pa4ps"]
[ext_resource type="Shader" path="res://textures/camera_water_ripple.gdshader" id="2_372ig"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2w66i"]
transparency = 1
cull_mode = 2
depth_draw_mode = 1
albedo_color = Color(0.32, 0.609, 0.94, 0.498)
roughness = 0.0
normal_enabled = true
normal_texture = ExtResource("1_pa4ps")
refraction_enabled = true
refraction_texture = ExtResource("1_pa4ps")
uv1_scale = Vector3(0.027, 0.027, 0.027)
uv1_offset = Vector3(28.0093, 28.0093, 28.0093)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_b3i6q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72uqj"]
shader = ExtResource("2_372ig")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_yeaty"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7h2ni"]
size = Vector3(0.1, 0.1, 0.1)

[node name="CSGBox3D" type="CSGBox3D"]
process_priority = 999
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00408435, 0, -0.00451219)
material = SubResource("StandardMaterial3D_2w66i")
script = ExtResource("1_cd1js")

[node name="SwimmingArea" type="Area3D" parent="." groups=["water_area"]]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 10

[node name="CollisionShape" type="CollisionShape3D" parent="SwimmingArea"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_b3i6q")

[node name="RippleOverlay" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = -10
z_as_relative = false
material = SubResource("ShaderMaterial_72uqj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_yeaty")

[node name="CameraPosCastShape" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_7h2ni")
target_position = Vector3(0, 0, 0)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false
